getting main subwaystation congest

--- a/get_api_data.ipynb
+++ b/get_api_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# targets => [공덕역,선릉역,신림역]\n",
+    "\"\"\"\n",
+    "서울 3대 업무지구인 CBD(종로구·중구 일대), GBD(강남구·서초구 일대), YBD(영등포구 일대)를 비롯해 \n",
+    "서울디지털국가산업단지,마곡&염창지구 등 대규모 업무지구 및 산업단지를 빠르게 이동할 수 있는 지역에 \n",
+    "주거지가 위치하면 출퇴근 시 느끼는 대중교통 혼잡이나 장거리 이동에 대한 부담으로부터 자유로울 수 있다.\n",
+    "\n",
+    "출처 : 국토일보(http://www.ikld.kr)\n",
+    "\"\"\"\n",
+    "\n",
+    "target_1 = ['강남역','역삼역','선릉역']\n",
+    "target_2 = ['시청역','을지로3가역','종각역']\n",
+    "target_3 = ['구로디지털단지역','영등포역','신도림역']\n",
+    "target_4 = ['공덕역']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -51,33 +72,284 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>87</th>\n",
        "      <td>2호선</td>\n",
-       "      <td>신림역</td>\n",
-       "      <td>230</td>\n",
+       "      <td>선릉역</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>2호선</td>\n",
+       "      <td>역삼역</td>\n",
+       "      <td>221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>2호선</td>\n",
+       "      <td>강남역</td>\n",
+       "      <td>222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>신분당선</td>\n",
+       "      <td>강남역</td>\n",
+       "      <td>D07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   subwayLine stationName stationCode\n",
-       "97        2호선         신림역         230"
+       "    subwayLine stationName stationCode\n",
+       "87         2호선         선릉역         220\n",
+       "88         2호선         역삼역         221\n",
+       "89         2호선         강남역         222\n",
+       "411       신분당선         강남역         D07"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# targets => [공덕역,선릉역,신림역]\n",
-    "namer[namer['stationName']=='신림역']"
+    "namer[namer['stationName'].isin(target_1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subwayLine</th>\n",
+       "      <th>stationName</th>\n",
+       "      <th>stationCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1호선</td>\n",
+       "      <td>종각역</td>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1호선</td>\n",
+       "      <td>시청역</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2호선</td>\n",
+       "      <td>시청역</td>\n",
+       "      <td>201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2호선</td>\n",
+       "      <td>을지로3가역</td>\n",
+       "      <td>203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>3호선</td>\n",
+       "      <td>을지로3가역</td>\n",
+       "      <td>330</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    subwayLine stationName stationCode\n",
+       "31         1호선         종각역         131\n",
+       "32         1호선         시청역         132\n",
+       "62         2호선         시청역         201\n",
+       "64         2호선      을지로3가역         203\n",
+       "137        3호선      을지로3가역         330"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "namer[namer['stationName'].isin(target_2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subwayLine</th>\n",
+       "      <th>stationName</th>\n",
+       "      <th>stationCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1호선</td>\n",
+       "      <td>영등포역</td>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1호선</td>\n",
+       "      <td>신도림역</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>2호선</td>\n",
+       "      <td>구로디지털단지역</td>\n",
+       "      <td>232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>2호선</td>\n",
+       "      <td>신도림역</td>\n",
+       "      <td>234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>2호선신도림지선</td>\n",
+       "      <td>신도림역</td>\n",
+       "      <td>234-0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    subwayLine stationName stationCode\n",
+       "39         1호선        영등포역         139\n",
+       "40         1호선        신도림역         140\n",
+       "99         2호선    구로디지털단지역         232\n",
+       "101        2호선        신도림역         234\n",
+       "102   2호선신도림지선        신도림역       234-0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "namer[namer['stationName'].isin(target_3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subwayLine</th>\n",
+       "      <th>stationName</th>\n",
+       "      <th>stationCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>5호선</td>\n",
+       "      <td>공덕역</td>\n",
+       "      <td>529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>6호선</td>\n",
+       "      <td>공덕역</td>\n",
+       "      <td>626</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    subwayLine stationName stationCode\n",
+       "230        5호선         공덕역         529\n",
+       "276        6호선         공덕역         626"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "namer[namer['stationName'].isin(target_4)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,126 +357,119 @@
     "import requests\n",
     "from private._private_ import app_key\n",
     "\n",
-    "results = list()\n",
-    "hours = [7,8,9,17,18,19,20]\n",
-    "dows = ['MON', 'TUE', 'WED', 'THU', 'FRI']\n",
-    "sc = 230\n",
     "\n",
-    "for hour in hours:\n",
-    "    for dow in dows:\n",
-    "        url = f\"https://apis.openapi.sk.com/puzzle/congestion-train/stat/stations/{sc}?dow={dow}&hh={str(hour).zfill(2)}\"\n",
-    "        headers = {\n",
-    "            \"accept\": \"application/json\",\n",
-    "            \"appkey\": app_key()\n",
-    "        }\n",
+    "for sc in [529,626]:\n",
     "\n",
-    "        response = requests.get(url, headers=headers)\n",
-    "\n",
-    "        res_dict=eval(response.text)\n",
-    "        using_data = list()\n",
-    "        for trains in res_dict['contents']['stat']:\n",
-    "            count = 0\n",
-    "            for train in trains['data']:\n",
-    "                if train['congestionTrain'] == 0:\n",
-    "                    count += 1\n",
-    "            if count == 0:\n",
-    "                using_data.append(trains)\n",
-    "                \n",
-    "        df_main = pd.DataFrame(using_data)\n",
-    "        df_main['subwayLine'] =res_dict['contents']['subwayLine']\n",
-    "        df_main['stationName'] =res_dict['contents']['stationName']\n",
-    "        results.append(df_main)\n",
-    "df_1=pd.concat(results)\n",
+    "    results = list()\n",
+    "    hours = [7,8,9,17,18,19,20]\n",
+    "    dows = ['MON', 'TUE', 'WED', 'THU', 'FRI']\n",
     "\n",
     "\n",
-    "results = list()\n",
-    "for hour in hours:\n",
-    "    for dow in dows:\n",
-    "        url = f\"https://apis.openapi.sk.com/puzzle/congestion-car/stat/stations/{sc}?dow={dow}&hh={str(hour).zfill(2)}\"\n",
-    "        headers = {\n",
-    "            \"accept\": \"application/json\",\n",
-    "            \"appkey\": app_key()\n",
-    "        }\n",
-    "        response = requests.get(url, headers=headers)\n",
-    "        res_dict=eval(response.text)\n",
-    "        using_data = list()\n",
-    "        for trains in res_dict['contents']['stat']:\n",
-    "            count = 0\n",
-    "            for train in trains['data']:\n",
-    "                if sum(train['congestionCar']) == 0:\n",
-    "                    count += 1\n",
-    "            if count == 0:\n",
-    "                using_data.append(trains)\n",
+    "    cur_name=namer[namer['stationCode']==str(sc)]['stationName'].values[0]\n",
+    "    cur_line=namer[namer['stationCode']==str(sc)]['subwayLine'].values[0]\n",
     "\n",
-    "        df_main = pd.DataFrame(using_data)\n",
-    "        df_main['subwayLine'] =res_dict['contents']['subwayLine']\n",
-    "        df_main['stationName'] =res_dict['contents']['stationName']\n",
-    "        results.append(df_main)\n",
-    "df_2=pd.concat(results)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1['time'] = df_1['data'].apply(lambda x: f\"{x[0]['dow']}_{x[0]['hh']}\")\n",
     "\n",
-    "total_df = list()\n",
-    "for line in [0,1]:\n",
-    "    for date in df_1['time'].unique():\n",
-    "        cc_df=df_1[(df_1['updnLine']==line) & (df_1['time']==date)]\n",
-    "        tmp_list = list()\n",
-    "        for i in range(len(cc_df)):\n",
-    "            tmp_df=pd.DataFrame(cc_df['data'].reset_index(drop=True)[i])\n",
-    "            tmp_df['up_down'] = line\n",
-    "            tmp_list.append(tmp_df)\n",
-    "        total_df.append(pd.concat(tmp_list))    \n",
-    "df_1_cleaned=pd.concat(total_df)\n",
-    "df_1_cleaned.reset_index(drop=True,inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1_cleaned.to_csv('data/final_data/sinlim_congest.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_2['time']=df_2['data'].apply(lambda x: f\"{x[0]['dow']}_{x[0]['hh']}\")\n",
-    "total_df = list()\n",
-    "for line in [0,1]:\n",
-    "    for date in df_2['time'].unique():\n",
-    "        cc_df=df_2[(df_2['updnLine']==line) & (df_2['time']==date)]\n",
-    "        tmp_list = list()\n",
-    "        for i in range(len(cc_df)):\n",
-    "            tmp_df=pd.DataFrame(cc_df['data'].reset_index(drop=True)[i])\n",
-    "            tmp_df['up_down'] = line\n",
-    "            tmp_list.append(tmp_df)\n",
-    "        total_df.append(pd.concat(tmp_list))    \n",
-    "df_2_cleaned=pd.concat(total_df)\n",
+    "    # get data 1\n",
     "\n",
-    "df_2_cleaned.reset_index(drop=True,inplace=True)\n",
-    "for i in range(len(df_2_cleaned['congestionCar'][0])):\n",
-    "    df_2_cleaned[f'congestion_{i}']=df_2_cleaned['congestionCar'].apply(lambda x: x[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_2_cleaned.to_csv('data/final_data/sinlim_congest_section.csv')"
+    "    for hour in hours:\n",
+    "        for dow in dows:\n",
+    "            url = f\"https://apis.openapi.sk.com/puzzle/congestion-train/stat/stations/{sc}?dow={dow}&hh={str(hour).zfill(2)}\"\n",
+    "            headers = {\n",
+    "                \"accept\": \"application/json\",\n",
+    "                \"appkey\": app_key()\n",
+    "            }\n",
+    "\n",
+    "            response = requests.get(url, headers=headers)\n",
+    "\n",
+    "            res_dict=eval(response.text)\n",
+    "            using_data = list()\n",
+    "            for trains in res_dict['contents']['stat']:\n",
+    "                count = 0\n",
+    "                for train in trains['data']:\n",
+    "                    if train['congestionTrain'] == 0:\n",
+    "                        count += 1\n",
+    "                if count == 0:\n",
+    "                    using_data.append(trains)\n",
+    "                    \n",
+    "            df_main = pd.DataFrame(using_data)\n",
+    "            df_main['subwayLine'] =res_dict['contents']['subwayLine']\n",
+    "            df_main['stationName'] =res_dict['contents']['stationName']\n",
+    "            results.append(df_main)\n",
+    "    df_1=pd.concat(results)\n",
+    "\n",
+    "    # get data 2\n",
+    "\n",
+    "    results = list()\n",
+    "    for hour in hours:\n",
+    "        for dow in dows:\n",
+    "            url = f\"https://apis.openapi.sk.com/puzzle/congestion-car/stat/stations/{sc}?dow={dow}&hh={str(hour).zfill(2)}\"\n",
+    "            headers = {\n",
+    "                \"accept\": \"application/json\",\n",
+    "                \"appkey\": app_key()\n",
+    "            }\n",
+    "            response = requests.get(url, headers=headers)\n",
+    "            res_dict=eval(response.text)\n",
+    "            using_data = list()\n",
+    "            for trains in res_dict['contents']['stat']:\n",
+    "                count = 0\n",
+    "                for train in trains['data']:\n",
+    "                    for _ in train['congestionCar']:\n",
+    "                        if _ == 0 :\n",
+    "                            count += 1\n",
+    "                    if count == 0:\n",
+    "                        using_data.append(trains)\n",
+    "\n",
+    "            df_main = pd.DataFrame(using_data)\n",
+    "            df_main['subwayLine'] =res_dict['contents']['subwayLine']\n",
+    "            df_main['stationName'] =res_dict['contents']['stationName']\n",
+    "            results.append(df_main)\n",
+    "    df_2=pd.concat(results)\n",
+    "\n",
+    "    ## preprocessing_Data_1\n",
+    "\n",
+    "    df_1['time'] = df_1['data'].apply(lambda x: f\"{x[0]['dow']}_{x[0]['hh']}\")\n",
+    "    total_df = list()\n",
+    "    for line in [0,1]:\n",
+    "        for date in df_1['time'].unique():\n",
+    "            cc_df=df_1[(df_1['updnLine']==line) & (df_1['time']==date)]\n",
+    "            tmp_list = list()\n",
+    "            for i in range(len(cc_df)):\n",
+    "                tmp_df=pd.DataFrame(cc_df['data'].reset_index(drop=True)[i])\n",
+    "                tmp_df['up_down'] = line\n",
+    "                tmp_list.append(tmp_df)\n",
+    "            total_df.append(pd.concat(tmp_list))    \n",
+    "    df_1_cleaned=pd.concat(total_df)\n",
+    "    df_1_cleaned['subwayLine'] = cur_line\n",
+    "    df_1_cleaned['stationName'] = cur_name\n",
+    "    df_1_cleaned.reset_index(drop=True,inplace=True)\n",
+    "\n",
+    "    cur_name=namer[namer['stationCode']==str(sc)]['stationName'].values[0]\n",
+    "\n",
+    "    df_1_cleaned.to_csv(f'data/final_data/{cur_name}_{cur_line}_congest.csv')\n",
+    "\n",
+    "    ## preprocessing_Data_2\n",
+    "\n",
+    "    df_2['time']=df_2['data'].apply(lambda x: f\"{x[0]['dow']}_{x[0]['hh']}\")\n",
+    "    total_df = list()\n",
+    "    for line in [0,1]:\n",
+    "        for date in df_2['time'].unique():\n",
+    "            cc_df=df_2[(df_2['updnLine']==line) & (df_2['time']==date)]\n",
+    "            tmp_list = list()\n",
+    "            for i in range(len(cc_df)):\n",
+    "                tmp_df=pd.DataFrame(cc_df['data'].reset_index(drop=True)[i])\n",
+    "                tmp_df['up_down'] = line\n",
+    "                tmp_list.append(tmp_df)\n",
+    "            total_df.append(pd.concat(tmp_list))    \n",
+    "    df_2_cleaned=pd.concat(total_df)\n",
+    "\n",
+    "    df_2_cleaned.reset_index(drop=True,inplace=True)\n",
+    "    for i in range(len(df_2_cleaned['congestionCar'][0])):\n",
+    "        df_2_cleaned[f'congestion_{i}']=df_2_cleaned['congestionCar'].apply(lambda x: x[i])\n",
+    "        \n",
+    "    df_1_cleaned['subwayLine'] = cur_line\n",
+    "    df_1_cleaned['stationName'] = cur_name\n",
+    "\n",
+    "    df_2_cleaned.to_csv(f'data/final_data/{cur_name}_{cur_line}congest_section.csv')"
    ]
   },
   {
