--- a/get_api_data.ipynb
+++ b/get_api_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -107,18 +107,20 @@
        "411       신분당선         강남역         D07"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "namer[namer['stationName'].isin(target_1)]"
+    "namer[namer['stationName'].isin(target_1)]\n",
+    "\n",
+    "[220,221,222,'D07',131,132,201,203,330]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +193,7 @@
        "137        3호선      을지로3가역         330"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
        "102   2호선신도림지선        신도림역       234-0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
        "276        6호선         공덕역         626"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,6 +476,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"import pandas as pd\n",
+    "import requests\n",
+    "from private._private_ import app_key\n",
+    "\n",
+    "\n",
+    "for sc in [529,626]:\n",
+    "\n",
+    "    results = list()\n",
+    "    hours = [7,8,9,17,18,19,20]\n",
+    "    dows = ['MON', 'TUE', 'WED', 'THU', 'FRI']\n",
+    "\n",
+    "\n",
+    "    cur_name=namer[namer['stationCode']==str(sc)]['stationName'].values[0]\n",
+    "    cur_line=namer[namer['stationCode']==str(sc)]['subwayLine'].values[0]\n",
+    "    # get data 2\n",
+    "\n",
+    "    results = list()\n",
+    "    for hour in hours:\n",
+    "        for dow in dows:\n",
+    "            url = f\"https://apis.openapi.sk.com/puzzle/congestion-car/stat/stations/{sc}?dow={dow}&hh={str(hour).zfill(2)}\"\n",
+    "            headers = {\n",
+    "                \"accept\": \"application/json\",\n",
+    "                \"appkey\": app_key()\n",
+    "            }\n",
+    "            response = requests.get(url, headers=headers)\n",
+    "            res_dict=eval(response.text)\n",
+    "            using_data = list()\n",
+    "            for trains in res_dict['contents']['stat']:\n",
+    "                count = 0\n",
+    "                for train in trains['data']:\n",
+    "                    for _ in train['congestionCar']:\n",
+    "                        if _ == 0 :\n",
+    "                            count += 1\n",
+    "                    if count == 0:\n",
+    "                        using_data.append(trains)\n",
+    "\n",
+    "            df_main = pd.DataFrame(using_data)\n",
+    "            df_main['subwayLine'] =res_dict['contents']['subwayLine']\n",
+    "            df_main['stationName'] =res_dict['contents']['stationName']\n",
+    "            results.append(df_main)\n",
+    "    df_2=pd.concat(results)\n",
+    "    ## preprocessing_Data_2\n",
+    "\n",
+    "    df_2['time']=df_2['data'].apply(lambda x: f\"{x[0]['dow']}_{x[0]['hh']}\")\n",
+    "    total_df = list()\n",
+    "    \n",
+    "    for line in [0,1]:\n",
+    "        for date in df_2['time'].unique():\n",
+    "            cc_df=df_2[(df_2['updnLine']==line) & (df_2['time']==date)]\n",
+    "            tmp_list = list()\n",
+    "            for i in range(len(cc_df)):\n",
+    "                tmp_df=pd.DataFrame(cc_df['data'].reset_index(drop=True)[i])\n",
+    "                tmp_df['up_down'] = line\n",
+    "                tmp_list.append(tmp_df)\n",
+    "            total_df.append(pd.concat(tmp_list))    \n",
+    "    df_2_cleaned=pd.concat(total_df)\n",
+    "\n",
+    "    df_2_cleaned.reset_index(drop=True,inplace=True)\n",
+    "    for i in range(len(df_2_cleaned['congestionCar'][0])):\n",
+    "        df_2_cleaned[f'congestion_{i}']=df_2_cleaned['congestionCar'].apply(lambda x: x[i])\n",
+    "        \n",
+    "    df_2_cleaned['subwayLine'] = cur_line\n",
+    "    df_2_cleaned['stationName'] = cur_name\n",
+    "\n",
+    "    df_2_cleaned.to_csv(f'data/data_temp/{cur_name}_{cur_line}congest_section.csv')\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -496,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:41:22) [Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
