--- a/_main_.ipynb
+++ b/_main_.ipynb
@@ -5,25 +5,7 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.rc('font',family='AppleGothic')\n",
-    "plt.rc('axes',unicode_minus=False)\n",
-    "plt.rc('date.autoformatter',minute=\"%H:%M\")\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(action='ignore')\n",
-    "\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from codes_get_data.get_congest_func import get_congest\n",
-    "\n",
-    "from main_codes.read_data import read_congest,read_congest_section\n",
-    "from main_codes.show_congest_graph import relative_graph_morning,relative_graph_dinner\n",
-    "from main_codes.show_congest_sectional_graph import get_sectional_df_morning,get_sectional_df_dinner,show_sectional_graph"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -42,7 +24,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:41:22) [Clang 13.0.1 ]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
